[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.36"

[profile.release]
opt-level = 3
lto = true
incremental = false
codegen-units = 1
debug = false
panic = "abort"
